# xodr

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
cmake/: Packing.cmake
files/: requirements.xodr.ubuntu20.04.system
include/: OpenDRIVE_1.4H.h  OpenDRIVE_1.5M.h
src/: OpenDRIVE_1.4H.cpp  OpenDRIVE_1.5M.cpp
